--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,8 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug Calculator",
+            "name": "C/C++: gcc.exe build and debug active file",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/my_fancy_calculator.exe",
@@ -15,7 +12,8 @@
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:/TDM-GCC-64/bin/gdb.exe"
+            "miDebuggerPath": "C:/TDM-GCC-64/bin/gdb.exe",
+            "preLaunchTask": "C/C++: gcc.exe build active file"
         }
     ]
 }
